[gd_scene load_steps=15 format=3 uid="uid://b8vurrpbnl8sn"]

[ext_resource type="Script" path="res://core/game/game.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://y4nvkqe0mq7d" path="res://assets/graphics/background/bg.png" id="2"]
[ext_resource type="Texture2D" uid="uid://bp6juf1gurjn1" path="res://assets/graphics/background/back.png" id="3"]
[ext_resource type="PackedScene" uid="uid://cmcisg3xoehoy" path="res://core/game/avatar.tscn" id="4"]
[ext_resource type="FontFile" uid="uid://c24frujlhbnu4" path="res://assets/misc/04B_11__.TTF" id="5"]
[ext_resource type="Texture2D" uid="uid://djdl2k4rata0u" path="res://assets/graphics/ui/gauge.png" id="6"]
[ext_resource type="Texture2D" uid="uid://dl2s8ed5vrqrg" path="res://assets/graphics/ui/arrow.png" id="7"]
[ext_resource type="PackedScene" uid="uid://bgf5uqahg5v7q" path="res://core/game/spawner.tscn" id="8"]
[ext_resource type="Texture2D" uid="uid://biy7vboppfpoe" path="res://assets/graphics/background/glass.png" id="9"]
[ext_resource type="Texture2D" uid="uid://nlh63lx4cyoi" path="res://assets/graphics/background/cabinet.png" id="10"]
[ext_resource type="AudioStream" uid="uid://bh4mixguq8nlj" path="res://assets/audio/connect.wav" id="11"]
[ext_resource type="AudioStream" uid="uid://d840jex3ku18" path="res://assets/audio/bust-up.wav" id="12"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(860, 100)

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(200, 540)

[node name="Game" type="Node2D"]
script = ExtResource("1")

[node name="Background" type="Sprite2D" parent="."]
z_index = -10
texture = ExtResource("2")
centered = false

[node name="Back" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3")
centered = false

[node name="Avatar" parent="." instance=ExtResource("4")]
position = Vector2(1000, 360)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Hud" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="Score" type="Label" parent="CanvasLayer/Hud"]
layout_mode = 0
offset_left = 570.0
offset_top = 442.0
offset_right = 690.0
offset_bottom = 490.0
theme_override_fonts/font = ExtResource("5")
theme_override_font_sizes/font_size = 24
text = "9999"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Coomer" type="Label" parent="CanvasLayer/Hud"]
visible = false
layout_mode = 0
offset_left = 540.0
offset_top = 176.0
offset_right = 720.0
offset_bottom = 216.0
theme_override_fonts/font = ExtResource("5")
theme_override_font_sizes/font_size = 8
text = "- GAME JOURNO MODE -"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Next" type="Sprite2D" parent="CanvasLayer/Hud"]
position = Vector2(630, 300)

[node name="Instructions" type="Label" parent="CanvasLayer/Hud"]
layout_mode = 0
offset_left = 50.0
offset_top = 694.0
offset_right = 530.0
offset_bottom = 722.0
theme_override_fonts/font = ExtResource("5")
theme_override_font_sizes/font_size = 16
text = "LEFT/RIGHT to move - DOWN to drop"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MusicToggle" type="Label" parent="CanvasLayer/Hud"]
layout_mode = 0
offset_left = 731.0
offset_top = 696.0
offset_right = 944.0
offset_bottom = 724.0
theme_override_fonts/font = ExtResource("5")
theme_override_font_sizes/font_size = 16
text = "M to toggle music"
horizontal_alignment = 2
vertical_alignment = 1

[node name="SoundToggle" type="Label" parent="CanvasLayer/Hud"]
layout_mode = 0
offset_left = 1057.0
offset_top = 696.0
offset_right = 1270.0
offset_bottom = 724.0
theme_override_fonts/font = ExtResource("5")
theme_override_font_sizes/font_size = 16
text = "N to toggle sound"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Gague" type="Sprite2D" parent="CanvasLayer/Hud"]
position = Vector2(1000, 21)
texture = ExtResource("6")

[node name="Bar" type="TextureProgressBar" parent="CanvasLayer/Hud"]
layout_mode = 0
offset_left = 757.0
offset_top = 37.0
offset_right = 1242.0
offset_bottom = 42.0
max_value = 485.0
value = 283.0
texture_progress = ExtResource("7")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Hud"]
layout_mode = 0
offset_left = 725.0
offset_top = 180.0
offset_right = 838.0
offset_bottom = 246.0

[node name="IncreaseBust" type="Button" parent="CanvasLayer/Hud/VBoxContainer"]
layout_mode = 2
text = "Increase Bust"

[node name="ResetBust" type="Button" parent="CanvasLayer/Hud/VBoxContainer"]
layout_mode = 2
text = "Reset Bust"

[node name="GameOver" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 720.0
offset_bottom = 720.0

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/GameOver"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 60.0
offset_top = 184.0
offset_right = -200.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.784314)

[node name="GameOverText" type="Label" parent="CanvasLayer/GameOver"]
layout_mode = 0
offset_left = 50.0
offset_top = 320.0
offset_right = 530.0
offset_bottom = 440.0
theme_override_fonts/font = ExtResource("5")
theme_override_font_sizes/font_size = 32
text = "-- GAME OVER --"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Retry" type="Label" parent="CanvasLayer/GameOver"]
layout_mode = 0
offset_left = 50.0
offset_top = 360.0
offset_right = 530.0
offset_bottom = 480.0
theme_override_fonts/font = ExtResource("5")
theme_override_font_sizes/font_size = 16
text = "press UP to restart"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Table" type="Node2D" parent="."]

[node name="Floor" type="StaticBody2D" parent="Table" groups=["floor"]]
position = Vector2(-70, 10)

[node name="Hitbox" type="CollisionShape2D" parent="Table/Floor"]
position = Vector2(360, 730)
shape = SubResource("1")

[node name="Basket" type="StaticBody2D" parent="Table" groups=["basket"]]
position = Vector2(50, 410)

[node name="Left" type="CollisionShape2D" parent="Table/Basket"]
position = Vector2(-90, 40)
shape = SubResource("2")

[node name="Right" type="CollisionShape2D" parent="Table/Basket"]
position = Vector2(570, 40)
shape = SubResource("2")

[node name="Spawner" parent="Table" instance=ExtResource("8")]
position = Vector2(300, 20)
limits = Vector2(90, 490)

[node name="Glass" type="Sprite2D" parent="."]
z_index = 10
texture = ExtResource("9")
centered = false
metadata/_edit_lock_ = true

[node name="Cabinet" type="Sprite2D" parent="."]
z_index = 20
texture = ExtResource("10")
centered = false
metadata/_edit_lock_ = true

[node name="ConnectSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11")
volume_db = -2.0

[node name="Music" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("12")
autoplay = true

[connection signal="pressed" from="CanvasLayer/Hud/VBoxContainer/IncreaseBust" to="." method="_on_increase_bust_pressed"]
[connection signal="pressed" from="CanvasLayer/Hud/VBoxContainer/ResetBust" to="." method="_on_reset_bust_pressed"]
